--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/main/api/index.ts"
+    "dev": "nodemon src/main/api/index.ts",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
-    "eslint-config-standard-with-typescript": "^34.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "^8.38.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.1",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
-  "dependencies": {
-    "lint-staged": "^13.2.1"
-  }
+  "dependencies": {}
 }
