--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
@@ -18,5 +19,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
