--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.1",
     "nodemon": "^2.0.22",
+    "prisma": "^4.12.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "express": "^4.18.2"
   }
 }
