--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
+    "@types/module-alias": "^2.0.1",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
+    "module-alias": "^2.2.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0"
   }
