--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "nodemon": "^2.0.22",
     "prisma": "^4.12.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "4.9.5"
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
