--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "module-alias": "^2.2.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "uuid-apikey": "^1.5.3"
   }
 }
