--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/main/api/index.ts",
+    "start": "node dist/main/api/index.js",
+    "build": "rimraf dist && tsc",
     "prepare": "husky install"
   },
   "devDependencies": {
