--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
+    "papaparse": "^5.4.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0",
     "uuid": "^9.0.0",
