--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
+    "@types/csvtojson": "^2.0.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.15.11",
+    "@types/papaparse": "^5.3.7",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
@@ -31,12 +34,14 @@
     "@types/module-alias": "^2.0.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
+    "multer": "^1.4.5-lts.1",
     "papaparse": "^5.4.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0",
