--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "scripts": {
     "dev": "nodemon src/main/api/index.ts",
     "start": "node dist/main/api/index.js",
-    "build": "rimraf dist && tsc",
-    "prepare": "husky install"
+    "build": "rimraf dist && tsc -p tsconfig-build.json",
+    "prepare": "husky install",
+    "test": "jest",
+    "test:watch": "yarn test --watch"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/csvtojson": "^2.0.0",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.15.11",
@@ -23,9 +26,11 @@
     "@typescript-eslint/parser": "^5.58.0",
     "eslint": "^8.38.0",
     "husky": "^8.0.3",
+    "jest": "^29.5.0",
     "lint-staged": "^13.2.1",
     "nodemon": "^2.0.22",
     "prisma": "^4.12.0",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "4.9.5"
   },
