--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "rimraf dist && tsc -p tsconfig-build.json",
     "prepare": "husky install",
     "test": "jest",
-    "test:watch": "yarn test --watch"
+    "test:watch": "yarn test --watch",
+    "test:staged": "yarn test --findRelatedTests"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
