refact: change reading file to path resolve

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/main/api/index.js",
     "build": "rimraf dist && tsc -p tsconfig-build.json",
     "prepare": "husky install",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:watch": "yarn test --watch",
     "test:staged": "yarn test --findRelatedTests"
   },
