--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
     "multer": "^1.4.5-lts.1",
