--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,10 @@ services:
       - POSTGRES_DB=coupondb
     ports:
       - '5434:5432'
+  redis:
+    image: bitnami/redis:latest
+    container_name: redis
+    ports:
+      - '6379:6379'
+    environment:
+      REDIS_PASSWORD: wavvvesredis
