--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^8.38.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
+    "jest-mock-extended": "^3.0.4",
     "lint-staged": "^13.2.1",
     "nodemon": "^2.0.22",
     "prisma": "^4.12.0",
