--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/main/api/index.js",
     "build": "rimraf dist && tsc -p tsconfig.build.json",
     "prepare": "husky install",
-    "test": "jest --passWithNoTests --runInBand",
+    "test": "jest --no-cache --passWithNoTests --runInBand",
     "test:watch": "yarn test --watch",
     "test:staged": "yarn test --findRelatedTests",
     "test:coverage": "yarn test --coverage"
