--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test:coverage": "yarn test --coverage"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.69",
+    "@swc/jest": "^0.2.26",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/csvtojson": "^2.0.0",
@@ -33,7 +35,6 @@
     "lint-staged": "^13.2.1",
     "nodemon": "^2.0.22",
     "prisma": "^4.12.0",
-    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "4.9.5"
   },
