--- a/package.json
+++ b/package.json
@@ -14,50 +14,50 @@
     "test:coverage": "yarn test --coverage"
   },
   "devDependencies": {
-    "@swc/core": "^1.3.69",
-    "@swc/jest": "^0.2.26",
-    "@types/bcrypt": "^5.0.0",
-    "@types/cors": "^2.8.13",
-    "@types/csvtojson": "^2.0.0",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^18.15.11",
-    "@types/papaparse": "^5.3.7",
-    "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "eslint": "^8.38.0",
-    "husky": "^8.0.3",
-    "jest": "^29.5.0",
-    "jest-mock-extended": "^3.0.4",
-    "lint-staged": "^13.2.1",
-    "nodemon": "^2.0.22",
-    "prisma": "^4.12.0",
-    "ts-node": "^10.9.1",
+    "@swc/core": "1.3.69",
+    "@swc/jest": "0.2.26",
+    "@types/bcrypt": "5.0.0",
+    "@types/cors": "2.8.13",
+    "@types/csvtojson": "2.0.0",
+    "@types/express": "4.17.17",
+    "@types/jest": "29.5.2",
+    "@types/jsonwebtoken": "9.0.1",
+    "@types/multer": "1.4.7",
+    "@types/node": "18.15.11",
+    "@types/papaparse": "5.3.7",
+    "@types/uuid": "9.0.1",
+    "@typescript-eslint/eslint-plugin": "5.58.0",
+    "@typescript-eslint/parser": "5.58.0",
+    "eslint": "8.38.0",
+    "husky": "8.0.3",
+    "jest": "29.5.0",
+    "jest-mock-extended": "3.0.4",
+    "lint-staged": "13.2.1",
+    "nodemon": "2.0.22",
+    "prisma": "4.12.0",
+    "ts-node": "10.9.1",
     "typescript": "4.9.5"
   },
   "dependencies": {
-    "@prisma/client": "^4.12.0",
-    "@types/module-alias": "^2.0.1",
-    "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
-    "cors": "^2.8.5",
-    "csvtojson": "^2.0.10",
-    "dayjs": "^1.11.7",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-async-errors": "^3.1.1",
-    "ioredis": "^5.3.2",
-    "jsonwebtoken": "^9.0.0",
-    "module-alias": "^2.2.2",
-    "multer": "^1.4.5-lts.1",
-    "papaparse": "^5.4.1",
-    "reflect-metadata": "^0.1.13",
-    "stripe": "^12.12.0",
-    "tsyringe": "^4.7.0",
-    "uuid": "^9.0.0",
-    "uuid-apikey": "^1.5.3"
+    "@prisma/client": "4.12.0",
+    "@types/module-alias": "2.0.1",
+    "axios": "1.4.0",
+    "bcrypt": "5.1.0",
+    "cors": "2.8.5",
+    "csvtojson": "2.0.10",
+    "dayjs": "1.11.7",
+    "dotenv": "16.0.3",
+    "express": "4.18.2",
+    "express-async-errors": "3.1.1",
+    "ioredis": "5.3.2",
+    "jsonwebtoken": "9.0.0",
+    "module-alias": "2.2.2",
+    "multer": "1.4.5-lts.1",
+    "papaparse": "5.4.1",
+    "reflect-metadata": "0.1.13",
+    "stripe": "12.12.0",
+    "tsyringe": "4.7.0",
+    "uuid": "9.0.0",
+    "uuid-apikey": "1.5.3"
   }
 }
