--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "@typescript-eslint/no-explicit-any": "off",
     "import/export": "off",
     "semi": ["error", "always"],
-    "quotes": ["error", "double", { "allowTemplateLiterals": true }]
+    "quotes": ["error", "double", { "allowTemplateLiterals": true }],
+    "@typescript-eslint/ban-types": "off"
   }
 }
