--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,16 @@ services:
       - '6379:6379'
     environment:
       REDIS_PASSWORD: redis
+  rabbitmq:
+    image: rabbitmq:management
+    container_name: couponmq
+    environment:
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+
+networks:
+  default:
+    driver: bridge
