--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "module-alias": "2.2.2",
     "multer": "1.4.5-lts.1",
     "papaparse": "5.4.1",
+    "pino": "^8.17.1",
     "stripe": "12.12.0",
     "uuid": "9.0.0",
     "uuid-apikey": "1.5.3"
