--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "jest-mock-extended": "3.0.4",
     "lint-staged": "13.2.1",
     "nodemon": "2.0.22",
-    "prisma": "4.12.0",
+    "prisma": "^5.7.0",
     "ts-node": "10.9.1",
     "typescript": "4.9.5"
   },
   "dependencies": {
-    "@prisma/client": "4.12.0",
+    "@prisma/client": "^5.7.0",
     "@types/module-alias": "2.0.1",
     "axios": "1.4.0",
     "bcrypt": "5.1.0",
