--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "papaparse": "5.4.1",
     "pino": "^8.17.1",
     "pino-pretty": "^10.3.0",
-    "stripe": "12.12.0",
+    "stripe": "^14.14.0",
     "uuid": "9.0.0",
     "uuid-apikey": "1.5.3"
   }
