--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/module-alias": "2.0.1",
     "axios": "1.4.0",
     "bcrypt": "5.1.0",
+    "body-parser": "^1.20.2",
     "cors": "2.8.5",
     "csvtojson": "2.0.10",
     "dayjs": "1.11.7",
